--- a/gb/24/2/18/n14183930.md
+++ b/gb/24/2/18/n14183930.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>世界经济渐与中国脱钩 根源是什么</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14143458-000_Hkg10247528-600x400.jpg" />
 <h6>中国大陆生产率下降、进出口双跌、失业率增高、债务危机加剧、经济环境恶化、外资纷纷撤离等一系列问题，导致中国经济加速倒车。(Johannes Eisele/AFP)
 </h6>
 <hr>
-	<p>【大纪元2024年02月19日讯】（大纪元记者宋唐、易如采访报导）中共当局一系列开倒车的行为，不仅让世界经济与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%84%B1%E9%92%A9.md#1">脱钩</a>，也让中国民众清醒过来，认识到是谁造成中国的经济、民生陷入崩溃边缘。</p>
-<p><strong>世界经济与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%84%B1%E9%92%A9.md#1">脱钩</a> ?</strong></p>
+	<p>【大纪元2024年02月19日讯】（大纪元记者宋唐、易如采访报导）中共当局一系列开倒车的行为，不仅让世界经济与中国经济脱钩，也让中国民众清醒过来，认识到是谁造成中国的经济、民生陷入崩溃边缘。</p>
+<p><strong>世界经济与中国经济脱钩 ?</strong></p>
 <p>进入2024年以来，中国股市跌跌不休，即使中共央行下调存款准备率0.5个百分点，预计将向市场释出高达人民币1兆元资金，依然救不了疲弱不堪的股市，中国股市和香港股市已成为全球唯一两家连续三年都在下跌的市场。</p>
 <p>与此同时，中国黄历新年之际，美国三大指数均连续上涨，标准普尔指数上涨 1.4%，纳斯达克指数上涨 2.3%，道指上涨 0.04%；其中标准普尔 500 指数冲上 5,000 点，纳斯达克指数触及 16,000 点。</p>
 <p>台股2月15日早盘指数飙涨逾600点，创下历史新高18,725点；2月13日，日本股市34年来首先破38,000点。东京证券交易所总市值今年1月11日已超上海证券交易所，重返亚洲首位，反映了投资者对两国经济增长的不同期待。</p>
 <p>印度已成为国际投资者的新宠， 2023年，海外基金向印度股票投入了超过210亿美元，全球养老金和主权财富管理机构也对印度青睐有加，印度是最佳的长期投资机会，已经成为一个明确的共识。</p>
 <p>1月22日，印度的股市市值达到4.33万亿美元，首次超过了香港（4.29万亿美元），成为全球第四大股票市场。</p>
-<figure id="attachment_6719880" aria-describedby="caption-attachment-6719880" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2013/05/1305311052172437.jpg"><img class="size-large wp-image-6719880" src="https://i.epochtimes.com/assets/uploads/2013/05/1305311052172437-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-6719880" class="wp-caption-text">印度已成为国际投资者的新宠。(Daniel Berehulak/Getty Images)</figcaption></figure>
+<figure id="attachment_6719880" aria-describedby="caption-attachment-6719880" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2013/05/1305311052172437.jpg"><img decoding="async" class="size-large wp-image-6719880" src="https://i.epochtimes.com/assets/uploads/2013/05/1305311052172437-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-6719880" class="wp-caption-text">印度已成为国际投资者的新宠。(Daniel Berehulak/Getty Images)</figcaption></figure>
 <p>现在很少听到中国GDP很快超越美国的言论了，国际社会对中国经济普遍看衰，各个评级机构纷纷下调中国经济的预期。</p>
 <p>高盛集团、摩根士丹利和瑞银集团等多家投资银行和券商普遍预期，中国住房建筑市场的低迷态势将在2024年持续，中国房地产建设将连续三年萎缩，创下最长一波连降纪录。</p>
 <p>彭博社1月4日报导，惠誉评级公司下调了中国四大国有资产管理公司的评级，原因是对其财务状况的担忧以及对政府支持减少的预期。</p>
@@ -30,7 +30,7 @@
 <p>“像恒大这种的那恒大爆雷了，那钱去了哪里？老百姓买房子的钱有三分之一、大概七千多亿的预收款，钱去哪里了呢？银行说政府已经把恒大的资金全部冻结了，这个钱是不是应该还给老百姓啊？没有啊，这是赤裸裸的抢劫。”</p>
 <p>孟军表示， 现在股市就是一个绞肉机，但凡有一点钱的投到股市、基金里边，全部给绞干净，家破人亡的大有人在。看看中值爆雷有多惨，像中值门槛高，都是三百万、五百万起步，老百姓都没有钱投资这么多呀，洗劫的全部是中产以上的富人阶级。</p>
 <p>“中国的股市不就是政策市吗？就是党指挥一切的，这些钱是被谁洗掉的，就是被共产党洗掉了。”他说。</p>
-<figure id="attachment_14156127" aria-describedby="caption-attachment-14156127" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14156127-GettyImages-71688027-e1704997402334.jpg"><img class="size-large wp-image-14156127" src="https://i.epochtimes.com/assets/uploads/2024/01/id14156127-GettyImages-71688027-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14156127" class="wp-caption-text">中国经济无法复苏被认为是2024年全球十大风险之一。图为北京市中心一个建筑工地。(China Photos/Getty Images)</figcaption></figure>
+<figure id="attachment_14156127" aria-describedby="caption-attachment-14156127" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14156127-GettyImages-71688027-e1704997402334.jpg"><img decoding="async" class="size-large wp-image-14156127" src="https://i.epochtimes.com/assets/uploads/2024/01/id14156127-GettyImages-71688027-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14156127" class="wp-caption-text">中国经济无法复苏被认为是2024年全球十大风险之一。图为北京市中心一个建筑工地。(China Photos/Getty Images)</figcaption></figure>
 <p>孟军表示，“大家都很清楚，不会有过去的好日子过了，改革开放没有了，现在基本上都是已经是党天下了，中共把魔爪已全面伸向民营企业，现在大家基本不做了，该变卖的变卖了，能移民的就移民了，我的百分之八、九十的朋友都是这样子，因为大家看不到希望了，你做也没有用。”</p>
 <p>“现在是很多的民营企业家，已经是真的是彻底绝望了，像我做了二三十年了都已经关掉了，一些做了十几二十年的都关掉了，现在非常难做，整个民营经济彻底恢复无望了。”</p>
 <p>对于中国经济的衰退，在观察者眼里，解决的方法其实很简单，美国经济学家保罗·克鲁曼认为，只需要结束金融抑制，允许更多的经济收入流向家庭，并加强社会保障网路就可以了。</p>
@@ -42,7 +42,7 @@
 <p><strong>都知道是谁造成的 ?</strong><strong>民间渐渐清醒</strong></p>
 <p>在经历了美中贸易战、修宪主席终身制、整肃民营经济、镇压香港、三年疫情清零、上海封城、支持俄罗斯入侵乌克兰等等，中共当局开倒车的路线，越来越清晰地展现在世人面前，中国民众开始一波一波地清醒起来，知道是谁造成的。</p>
 <p>去年12月4日大陆杂志《杂文选刊》最后一期封面漫画上画着一只大手在指向前方，在手上顺着指明的方向跑的人，纷纷掉下深渊，这被认为讥讽中共党魁习近平。</p>
-<p><ahref="https://i.epochtimes.com/assets/uploads/2024/02/id14183941-1702258250731.jpg"><img class="alignnone size-large wp-image-14183941" src="https://i.epochtimes.com/assets/uploads/2024/02/id14183941-1702258250731-600x335.jpg" alt="" width="600" b="335" /></a></p>
+<p><ahref="https://i.epochtimes.com/assets/uploads/2024/02/id14183941-1702258250731.jpg"><img decoding="async" class="alignnone size-large wp-image-14183941" src="https://i.epochtimes.com/assets/uploads/2024/02/id14183941-1702258250731-600x335.jpg" alt="" width="600" b="335" /></a></p>
 <p>有知情人士透露，现在地方的官员们，包括一般的公务员，不管中央三令五申，还是“躺平”。他们日常最爱去的还是饭局，只是更加小心。</p>
 <p>在各类饭局中，有一个口头禅是谁都会说的，就是每当说到可笑可气的人或事时，都爱提到“那头猪也是这样子”。甚至有时表达对上级的不满时，也将气发在“那头猪”身上，“都是那头猪干的”，然后引发哄堂大笑，因为谁都知道是在说习近平。</p>
 <p>孟军对大纪元表示，罪魁祸首就是他一个人，在没有他上台之前，还有改革开放，现在到了习手上，改革开放就彻底完了。实际上是习近平要负责，现在只要一个人解决了就完了，他死掉了，就没问题了。</p>
@@ -52,42 +52,34 @@
 <p>“所以这个政权领导国家会越来越多冲突，或者越来越多无力感，在政治学或行政学上面叫做政府失灵或政府失效，那这种情况会越来越明显。”</p>
 <p>王国臣表示，如果继续走下去，如果继续锁国，然后经济的衰败，最有可能想像的路径是北韩化。</p>
 <p>他分析说，他的政党会不会下来，关键点在于，第一个民众是不是愿意起来抗议，第二个更关键的是，那些公法检、政法委的枪头愿不愿意转向后面，而不是指向人民，要有这两个点，那么中共政党才可能会下来。</p>
-<p>“当然有时候事情是会产生历史的偶然，这种檫枪走火，哪一次会成功也不晓得，不过事前仍然是会有征兆的。”</p>
-	
+<p>“当然有时候事情是会产生历史的偶然，这种檫枪走火，哪一次会成功也不晓得，不过事前仍然是会有征兆的。”◇</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184669.md#1">中国经济拖累 香港超级豪宅价值暴跌逾25%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184620.md#1">中国股市开门不利 外国投资者再撤60亿元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184520.md#1">中共推白名单救房市 分析：显示危机严重程度</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184550.md#1">《财经》称“救市需要真金白银” 对习不满？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Apple AirPods Pro无线耳机 USB-C充电 2倍主动降噪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：112粒Tide三合一洗衣球 有3大功效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545674.md#1">消费需求不足 大陆银行员工自费推销信用卡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545781.md#1">罗马仕深夜正式发停工停产放假通知 上热搜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545632.md#1">锦州港财务造假遭重罚 高管被捕 退市倒计时</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/4/n10761662.md#1" target="_blank">周晓辉：从崇祯皇帝救不了大明王朝说当下</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/16/n14182095.md#1">【未解之谜】河北高人预言 大劫景象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178265.md#1">“一杯牛奶”怎样带来“大改变”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178267.md#1">婚姻中“善恶有报”的真实故事（三）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179409.md#1">年年有余 古人期待的不是鱼是什么呢？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/27/n14167911.md#1">一段婆媳情让她人生遇转机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/1/n13815646.md#1">【神韵早期节目】龙泉鼓舞（2009年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184007.md#1">【新闻看点】赵安吉死之谜 案件有何黑幕？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184043.md#1">【漂流传奇】黄秋生回忆录 戏外人生更精彩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/15/n14181462.md#1">退休后能否过上富裕生活 8个迹象可预测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/18/n14183381.md#1">【翻墙必看】5年后 大陆县城房价惊掉下巴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/17/n14183152.md#1">三种热门自由职业可在家工作 收入不错</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/17/n14183045.md#1">刘德华新片《红毯先生》被撤新年档 网曝内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/17/n14183027.md#1">中国新年档8部电影 已有4部撤档了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/17/n14183212.md#1">离婚后仍带继女一起旅游 章子怡获赞最佳后妈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/16/n14182771.md#1">刘嘉玲晒家中巨型桃花 自曝持续多年布阵原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/16/n14182721.md#1">没花一分钱 周星驰曾凭一招请到4万名群演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/18/n14183513.md#1">为何早上起床就喝咖啡不好？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/14/n14181058.md#1">研究：新冠疫苗致心肌炎 较过往30年多223倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/6/n14174363.md#1">带状疱疹长在两处较凶险 中医对付后遗症有解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/6/n14174855.md#1">如何一觉到天亮？6个避免起夜的妙招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172065.md#1">为何叶绿素受宠？除了抗癌 还有这些好处</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/18/n14183930.htm">世界经济渐与中国脱钩 根源是什么</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/18/n14183930.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/18/n14183930.htm">世界经济渐与中国脱钩 根源是什么</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/18/n14183930.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
